added useful links

--- a/robust_control/h_inf.ipynb
+++ b/robust_control/h_inf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = lambda s: 1/(s**2 + s + 1)\n",
+    "\n",
+    "s_ = np.linspace(0.001, 10, num=20000, endpoint=True, dtype=None, axis=0)\n",
+    "\n",
+    "G_ = G((0+1j)*s_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bode Plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.00000067e-03 -1.49997725e-03 -1.99995533e-03 ... -3.04091380e+00\n",
-      " -3.04091890e+00 -3.04092400e+00]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "Text(0, 0.5, 'Phase')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -58,18 +70,9 @@
     }
    ],
    "source": [
-    "G = lambda s: 1/(s**2 + s + 1)\n",
-    "\n",
-    "s_ = np.linspace(0.001, 10, num=20000, endpoint=True, dtype=None, axis=0)\n",
-    "\n",
-    "G_ = G((0+1j)*s_)\n",
-    "\n",
     "# Extract applitude and phase\n",
     "G_amp = np.abs(G_)\n",
     "G_phase = np.angle(G_)\n",
-    "\n",
-    "print(G_phase)\n",
-    "\n",
     "# Plot s on log scale and amplitude and phase on linear scale\n",
     "fig, ax = plt.subplots(2,1)\n",
     "\n",
@@ -94,8 +97,21 @@
    "metadata": {},
    "source": [
     "### Useful Links\n",
-    "- https://authors.library.caltech.edu/93672/1/01101812.pdf"
+    "- https://authors.library.caltech.edu/93672/1/01101812.pdf\n",
+    "- https://www.sciencedirect.com/science/article/pii/S1474667017519035\n",
+    "- http://www.cds.caltech.edu/~murray/books/AM08/pdf/fbs-public_24Jul2020.pdf\n",
+    "- https://enac.hal.science/hal-03818073/file/RobustControl%20(1).pdf\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
